--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="https://www.instagram.com/zaid_ahmed783/"><i class='bx bxl-instagram' ></i></a>
             <a href="https://www.linkedin.com/in/zaid-zaiddi-b56a33218"><i class='bx bxl-linkedin'></i></a>
         </div>
-        <a href="file:///C:/Users/CSC/Downloads/CV_2023-04-05-010436.pdf" class="btn">Download Resume</a>
+        <a href="/resume.pdf" class="btn">Download Resume</a>
     </div>
     <div class="home-img">
         <img src="me.jpg" alt="">
